--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
-  "name": "Requisição de Compras – Delícia Gourmet",
-  "short_name": "Requisições",
-  "description": "Sistema de requisição de compras da Delícia Gourmet",
-  "start_url": "/index.html",
+  "name": "CB SYSTEMS®",
+  "short_name": "CB SYSTEMS",
+  "description": "Sistema interno CB Systems - Ficha Técnica",
+  "start_url": "/dashboard.html",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2563eb",
+  "background_color": "#00c2b8",
+  "theme_color": "#00c2b8",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
