--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,15 @@
 {
-  "name": "CB SYSTEMS®",
-  "short_name": "CB SYSTEMS",
-  "description": "Sistema interno CB Systems - Ficha Técnica",
-  "start_url": "/dashboard.html",
+  "name": "Cardápio Digital • Premium",
+  "short_name": "Cardápio",
+  "start_url": "/index.html",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#00c2b8",
-  "theme_color": "#00c2b8",
+  "display_override": ["standalone", "fullscreen"],
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
-
