--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cardápio Premium",
+  "name": "Cardápio Digital • Premium",
   "short_name": "Cardápio",
   "start_url": "/index.html",
   "scope": "/",
