--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,23 @@
 {
-  "name": "Cardápio Digital • Premium",
+  "name": "Cardápio Digital • Mercatto",
   "short_name": "Cardápio",
-  "start_url": "/index.html",
-  "scope": "/",
+  "description": "Cardápio digital interativo",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#000000",
+  "theme_color": "#111111",
   "orientation": "portrait",
   "icons": [
-    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
