--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,12 @@
 {
-  "name": "Cardápio Digital • Mercatto",
+  "name": "Cardápio Premium",
   "short_name": "Cardápio",
-  "description": "Cardápio digital interativo",
-  "start_url": "./index.html",
-  "scope": "./",
-  "display": "standalone",
+  "start_url": "./",
+  "display": "fullscreen",
   "background_color": "#000000",
   "theme_color": "#111111",
-  "orientation": "portrait",
   "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
